philo_bonus: change var NAME: philo => philo_bonus

--- a/philo_bonus/Makefile
+++ b/philo_bonus/Makefile
@@ -41,7 +41,7 @@ RESET					= \033[1;0m
 
 #===<[ Sources: ]>==============================================================
 PROJECT				:= Philosophers
-NAME					:= philo
+NAME					:= philo_bonus
 PTHREAD_LIB		:= pthread
 INCLUDE				:= -Iinclude
 SRC_DIR				:= src
